Versió 1.1 del projecte web CreacióDigital.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,5 +11,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <div>Creació Digital</div>
+        <p>Paula Olivares Cano</p>
     </body>
 </html>
