--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,5 +12,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <body>
         <div>Creació Digital</div>
         <p>Paula Olivares Cano</p>
+        <p>Treballant amb branques...</p>
     </body>
 </html>
