Nova actualització branca principal.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,5 +13,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <div>Creació Digital</div>
         <p>Paula Olivares Cano</p>
         <p>Treballant amb branques...</p>
+        <p>Nova actualizació!</p>
     </body>
 </html>
