Nou contingut a estil_Bootstrap.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,7 +16,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <div class="container">
             <div class="mb-5 text-primary">Creació Digital</div>
             <p class="lead">Paula Olivares Cano</p>
-            <p class="text-muted">Treballant amb branques...</p>
+            <p class="text-muted">Treballant amb branques...</p> 
+        </div>
+        
+        <div class="container">
+            <div class="lead">Nou contingut a estils_Bootstrap.</div>
         </div>
         
     </body>
