--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,11 +10,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="../css/style.css"/>
     </head>
     <body class="bg-light text-center p-5">
         
         <div class="container">
-            <div class="mb-5 text-primary">Creació Digital</div>
+            <div class="mb-5 text-primary titol">Creació Digital</div>
             <p class="lead">Paula Olivares Cano</p>
             <p class="text-muted">Treballant amb branques...</p> 
         </div>
